--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -39,6 +39,11 @@ nav{
     background-color: rgba(53, 197, 207, 0.747);
 }
 
+.card{
+    cursor: pointer;
+
+}
+
 .card-body{
     background-color: rgba(53, 197, 207, 0.747);
 }
